--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -363,6 +363,7 @@
           </ng-template>
         </div>
         <div class='rt'>
+          <div class="timerequired">{{ row.timeRequiredDisp  }}</div>
           <button mat-button class='link-to-spot' (click)="onClickMap()"></button>
         </div>
       </mat-card-header>
