--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -438,6 +438,9 @@
                       <ng-template carouselSlide id="item.spotId">
                         <div class="thumbmain covered" (click)="linktoSpot(item)">
                           <img [src]="pic" [alt]="item.spotId" [title]="item.spotId" />
+                          <div class="memo" *ngIf="item.previewMemo[j]">
+                            {{item.previewMemo[j]}}
+                          </div>
                         </div>
                       </ng-template>
                     </ng-container>
