--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -581,12 +581,13 @@
                     position: absolute;
                     background: url("../../../assets/img/pin_gold-s.svg") no-repeat;
                     display: inline-block;
-                    width: 20px;
-                    height: 24px;
+                    width: 25px;
+                    height: 30px;
                     background-size: contain;
                     color: #fff;
-                    font-size: 12px;
-                    line-height: 22px;
+                    font-size: 16px;
+                    line-height: 24px;
+                    left: -8px;
                   }
 
                   img {
@@ -884,7 +885,7 @@
       top: 0;
       width: 100%;
       height: 100%;
-      background: rgba(100, 100, 100, .9);
+      background: rgba(100, 100, 100, .7);
       z-index: 18;
       display: flex;
       align-items: center;
@@ -984,6 +985,24 @@
     align-items: center;
     position: relative;
     justify-content: center;
+
+    button.del-spot{
+      display: flex;
+      align-items: center;
+      font-size: 16px;
+      color: $color-pnk02;
+      padding-left: 8px;
+
+      &::before {
+        content: url("../../../assets/img/icon_delete.svg");
+        width: 24px;
+        height: 24px;
+        display: inline-block;
+        margin-right: 4px;
+        position: absolute;
+        left: -16px;
+      }
+    }
 
     button.add-spot {
       display: flex;
