REMOJU-482 レビュー投稿　コメント・同意するチェックボックス・投稿ボタンのみにする

--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.html
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.html
@@ -69,9 +69,9 @@
               <span class='view'>
                 {{'InplanCount'|translate}}：{{item.planSpotQty}} {{ 'Man' | translate}}
               </span>
-              <span class='view'>
+              <!--<span class='view'>
                 {{'ReviewRate'|translate}}：{{item.reviewAvg}}
-              </span>
+              </span>-->
             </div>
             <!-- <span *ngIf="!isProd">
               {{item.id}}
