--- a/src/app/parts/review-list-panel/review-list-panel.component.html
+++ b/src/app/parts/review-list-panel/review-list-panel.component.html
@@ -18,14 +18,14 @@
           collapsedHeight="48px"
         >
           <div class="container">
-            <div class="star-ratings-sprite">
+            <!--<div class="star-ratings-sprite">
               <span [style.width]="avgEvaluation/5*100 + '%'" class="star-ratings-sprite-rating">
               {{avgEvaluation/5*100}}
               </span>
             </div>
             <div class="counter">
               {{avgEvaluation}}
-            </div>
+            </div>-->
             <span class="item">
               ( {{ reviewResult.reviews.length }} {{ "Results" | translate }})
             </span>
@@ -34,7 +34,7 @@
         <mat-list>
           <mat-list-item *ngFor="let item of reviewResult.reviews | slice: 0:dispQty">
             <div class="header">
-              <app-rating-comp [rating]="item.evaluation" [size]=12></app-rating-comp>
+              <!--<app-rating-comp [rating]="item.evaluation" [size]=12></app-rating-comp>-->
               <div class="date">
                 <span *ngIf="item.age">{{ item.age }}{{ "Age" | translate }} /</span>
                 <span *ngIf="item.gender==='femail'">{{ "Female" | translate }}</span>
@@ -52,23 +52,23 @@
                 <button mat-menu-item (click)="onClickReport(item)">{{ "ReportReview" | translate }}</button>
               </mat-menu>
             </div>
-            <div class="title">
+            <!--<div class="title">
               {{ item.title }}
             </div>
-            <!-- <div class="content" [ngClass]="{'more':item.ismore}" #elm> -->
+            <div class="content" [ngClass]="{'more':item.ismore}" #elm> -->
             <div class="content">
               {{ item.contents }}
             </div>
-            <div class="line2">
+            <!--<div class="line2">
               <div class="visit">
-                {{ "VisitDate" | translate }} : 
+                {{ "VisitDate" | translate }} :
                 <ng-container *ngIf="lang==='ja';else den" >{{ item.visitDate | date:"yyyy/MM/dd" }}</ng-container>
                 <ng-template #den >{{ item.visitDate | date:"MM/dd/yyyy" }}</ng-template>
               </div>
-              <!-- <a href="javascript:void(0)" class="continue" [ngClass]="{'off':item.ismore}" (click)="onIsmore(item)">
+              <a href="javascript:void(0)" class="continue" [ngClass]="{'off':item.ismore}" (click)="onIsmore(item)">
                 {{item.label}}
-              </a> -->
-            </div>
+              </a>
+            </div>-->
             <div class="pic">
               <owl-carousel-o [options]="reviewOptions">
                 <ng-container *ngFor="let picture of item.pictures; index as i">
