--- a/src/app/parts/review-post-dialog/review-post-dialog.component.html
+++ b/src/app/parts/review-post-dialog/review-post-dialog.component.html
@@ -16,7 +16,7 @@
       <h1>{{ data.spotplanName }}</h1>
     </div>
     <mat-list>
-      <!-- タイトル -->
+      <!-- タイトル
       <mat-list-item>
         <mat-form-field hintLabel="{{ 'Required' | translate }}" appearance="outline" style="width: 100%;">
           <mat-label>{{ "TitleEx" | translate }}</mat-label>
@@ -31,7 +31,7 @@
             [(ngModel)]="review.title" />
           <mat-hint align="end">{{ title.value?.length || 0 }}/20{{ "Characters" | translate }}</mat-hint>
         </mat-form-field>
-      </mat-list-item>
+      </mat-list-item>-->
       <!-- 本文 -->
       <mat-list-item>
         <mat-form-field hintLabel="{{ 'Required' | translate }}" appearance="outline" style="width: 100%;">
@@ -49,7 +49,7 @@
         </mat-form-field>
       </mat-list-item>
 
-      <mat-list-item class="evaluation">
+      <!--<mat-list-item class="evaluation">
         <label>{{ "SelectRating" | translate }}</label>
         <div class="evaluation-field">
           <span class="star-rating">
@@ -74,7 +74,7 @@
           <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
           <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>
-      </mat-list-item>
+      </mat-list-item>-->
 
       <mat-list-item>
         <input
