--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -14,7 +14,7 @@
   <mat-card *ngIf="isEdit" class="myplan-edit">
     <mat-card-content>
       <div id='edit'>
-        <div class="myplan-edit-box">ƒ
+        <div class="myplan-edit-box">
           <div class="lt">
             <div class="container">
               <ng-container *ngIf="row">
