--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -22,8 +22,7 @@
                   <mat-label>{{ 'PlanName' | translate }}</mat-label>
                   <input #inpName id="planName" name="planName" maxlength="36" required matInput
                     placeholder="{{'RequiredPlanName'|translate}}" [(ngModel)]="row.planName">
-                  <button *ngIf="row.planName" matSuffix mat-icon-button aria-label="Clear"
-                    (click)="row.planName=''">
+                  <button *ngIf="row.planName" matSuffix mat-icon-button aria-label="Clear" (click)="row.planName=''">
                     <mat-icon>close</mat-icon>
                   </button>
                 </mat-form-field>
@@ -42,16 +41,15 @@
                 <img src="/assets/img/bus.svg" alt="Bωus">
               </span>
             </button>
-  
+
             <!-- 最短ルート -->
             <button class="option" (click)="onClickAuto()" [disabled]="!row?.planSpots">
-              <span class="label"
-                [ngClass]="row?.isAuto?'color-brown':'color-silver'">{{ "Auto" | translate }}</span>
+              <span class="label" [ngClass]="row?.isAuto?'color-brown':'color-silver'">{{ "Auto" | translate }}</span>
               <span class="icon" [ngClass]="row?.isAuto?'color-brown':'color-silver'">
                 <img src="/assets/img/keiro.svg" alt="Auto">
               </span>
             </button>
-  
+
           </div>
         </div>
       </div>
@@ -158,121 +156,10 @@
               </dl>
             </div>
           </div>
-
-
-          <!-- <mat-accordion #mepSpot="matAccordion" multi>
-            <mat-expansion-panel [expanded]="step === i" (opened)="setStep(i)" #mepSpotPanel="matExpansionPanel"
-              class="transfer" hideToggle [ngClass]="{'zero':!row?.planSpots}">
-              <mat-expansion-panel-header [@.disabled]="true">
-                <dl class="td">
-                  <dt>
-                    <button (click)="onClickSpotDelete($event,item)" class="remove">
-                    </button>
-                  </dt>
-                  <dt>
-                    <div class="lt">
-                      <span class="order">{{ item.displayOrder }}</span>
-                      <ng-container *ngIf="item.planUserpictures && item.planUserpictures.length > 0; else spotPicture">
-                        <img
-                          [src]="item.planUserpictures[0].imageCropped ?? item.planUserpictures[0].picturePreviewUrl ?? item.planUserpictures[0].picture_url"
-                          [alt]="item.spotId" [title]="item.spotId" />
-                      </ng-container>
-                      <ng-template #spotPicture>
-                        <img [src]="item.pictures[0]" [alt]="item.spotId" [title]="item.spotId" />
-                      </ng-template>
-                    </div>
-                    <div class="rt">
-                      <span class="spotName" [innerHTML]="item.spotName"></span>
-                      <span class="areaName">
-                        <ng-container *ngIf="item.areaName">{{ item.areaName | langFilter: lang }}</ng-container>
-                        <ng-container *ngIf="item.categoryText">
-                          / {{ item.categoryText | langFilter: lang }}
-                        </ng-container>
-                      </span>
-                    </div>
-                  </dt>
-                  <dt cdkDragHandle>
-                    <img src="../../../assets/img/icon_swap.svg" width="16px" />
-                  </dt>
-                </dl>
-              </mat-expansion-panel-header>
-              
-              <div class='panel-content'>
-                <div class='sub'>
-                  {{ 'TravelBookmark' | translate }}
-                </div>
-                <mat-form-field hintLabel="{{ 'Required' | translate }}" appearance="outline">
-                  <mat-label>{{ 'SpotNameEx' | translate }}</mat-label>
-                  <textarea matInput #spotName name="spotName{{i}}" maxlength="30" required #inputinfo="ngModel"
-                    [(ngModel)]="item.spotName" (change)="onChange(false)"></textarea>
-                  <mat-hint align="end">{{spotName.value?.length || 0}}/30{{ "Characters" | translate }}</mat-hint>
-                </mat-form-field>
-              
-                <div class='select'>
-                  <div class="fileselector">
-                    {{ "MyplanSelectPhoto" | translate }}
-                    <input type="file" multiple="multiple" name="selectPhoto{{i}}" accept="image/*"
-                      (change)="onClickSelectPhotoSpot($event, item)" />
-                  </div>
-                  <label>{{ 'PasteImg' | translate }}</label>
-                </div>
-
-                <div *ngFor="let picture of item.planUserpictures; index as j;trackBy: myTrackBy" class="picpreview">
-                  <div class='picture'>
-                    <img width="100%" height="100%"
-                      [src]="picture.imageCropped ?? picture.picturePreviewUrl ?? picture.picture_url" />
-                    <button type="button" class="delete" (click)="onClickPhotoDeleteSpot(item, picture)"></button>
-                    <button *ngIf="picture.pictureFile" type="button" class="crop"
-                      (click)="onClickCropSpot(item, picture)">{{"Edit"|translate}}</button>
-                    <button class="swapbtn" *ngIf="item.planUserpictures.length > j + 1"
-                      (click)="onClickSpotPicture(picture)">
-                      <img src="../../../assets/img/icon_changepic.svg" alt="swip">
-                    </button>
-                  </div>
-                  <div class='memo'>
-                    <mat-form-field appearance="outline">
-                      <textarea matInput #memo name="memo{{i}}{{j}}" maxlength="1000" rows="3"
-                        placeholder="{{ 'PictureMemo' | translate }}" #inputinfo="ngModel" [(ngModel)]="picture.memo"
-                        (change)="onChange(false)"></textarea>
-                      <mat-hint align="end">{{memo.value?.length || 0}}/1000{{ "Characters" | translate }}&nbsp;<a
-                          href="javascript:void(0);" (click)="picture.memo='';"><span
-                            class="material-icons">backspace</span></a></mat-hint>
-                    </mat-form-field>
-                  </div>
-                </div>
-
-                <mat-form-field appearance="outline">
-                  <textarea matInput #memo name="memo{{i}}" maxlength="1000" rows="5"
-                    placeholder="{{ 'SpotExplanationEx' | translate }}" #inputinfo="ngModel" rows="5"
-                    [(ngModel)]="item.memo" (change)="onChange(false)">
-                  </textarea>
-                  <mat-hint align="end">{{memo.value?.length || 0}}/1000{{ "Characters" | translate }}&nbsp;<a
-                      href="javascript:void(0);" class="aclear" (click)="item.memo='';"><span
-                        class="material-icons">backspace</span></a></mat-hint>
-                </mat-form-field>
-
-                <div class="selectStay">
-                  <label>{{ "SuggestedTime" | translate }}</label>
-                  <div class="stayTime">
-                    <select name="stayTime{{i}}" [(ngModel)]="item.stayTime" (change)="onChange(true)">
-                      <option *ngFor="let sTime of $stayTime" [value]="sTime.id">
-                        {{ sTime.id }}{{ "Minute" | translate }}
-                      </option>
-                    </select>
-                  </div>
-                </div>
-                <div class='close'>
-                  <button (click)="setStep(999)">{{"Close"|translate}}</button>
-                </div>
-              </div>
-            </mat-expansion-panel>
-          </mat-accordion> -->
         </div>
         <!-- _blank view -->
         <div id="overlay" *ngIf="!row?.planSpots">
           <div class="guide">
-            <!-- <p class="bold">{{ "MyPlan#Sec1" | translate }}</p>
-            <p class="bold">{{ "MyPlan#Sec2" | translate }}</p> -->
             <p class='under'>{{ "MyPlan#Sec3" | translate }}</p>
             <div class="inputWrapper">
               <input placeholder="{{'SearchGuide'| translate}}" class="keyword" #keywordInput
@@ -315,15 +202,6 @@
           </ng-template>
         </div>
       </div>
-
-      <!-- <div class="bottom">
-        <div></div>
-        <div class="switchView" [ngClass]="{'en':lang==='en'}">
-          <input type="checkbox" id="switch-view1" (click)="onClickEdit()" [checked]="!isEdit" [disabled]="!row">
-          <label for="switch-view1"><span></span></label>
-          <div id="swImg"></div>
-        </div>
-      </div> -->
     </mat-card-content>
   </mat-card>
 
@@ -488,15 +366,6 @@
         <span class="sufix">{{ "EndTime" | translate  }}</span>{{ endTime }}
       </mat-list-item>
     </mat-list>
-
-    <!-- <div class="bottom prev">
-      <div></div>
-      <div class="switchView" [ngClass]="{'en':lang==='en'}">
-        <input type="checkbox" id="switch-view1" (click)="onClickEdit()" [checked]="!isEdit" [disabled]="!row">
-        <label for="switch-view1"><span></span></label>
-        <div id="swImg"></div>
-      </div>
-    </div> -->
   </div>
   <div class="footer">
     <!-- 保存 -->
