--- a/src/app/parts/myplan-spot-edit-dialog/myplan-spot-edit-dialog.component.scss
+++ b/src/app/parts/myplan-spot-edit-dialog/myplan-spot-edit-dialog.component.scss
@@ -35,7 +35,7 @@
             display: inline-block;
             padding: 2px 1em;
             position: relative;
-            margin-top: 0.8em;
+            //margin-top: 0.8em;
             margin-bottom: 0.8em;
             color: $color-gld01;
             background-color: #fff;
@@ -116,6 +116,7 @@
         }
 
         .picpreview {
+          margin-top: 0.8em;
           .picture {
             position: relative;
 
