--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -614,6 +614,7 @@
                     // white-space: nowrap;
                     text-overflow: ellipsis;
                     text-align: left;
+                    height: 3em;
                   }
 
                   .areaName {
