--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -787,7 +787,7 @@ $color-grn01: #81C5B4;
 // メニュー言語切り替え
 @mixin switchViewLang {
   .switchViewLang{
-    $edit:"英語";
+    $edit:"English";
     $preview:"日本語";
     $edit_en:"English";
     $preview_en:"Japanese";
