dialog close button

--- a/src/app/parts/myplan-plan-edit-dialog/myplan-plan-edit-dialog.component.html
+++ b/src/app/parts/myplan-plan-edit-dialog/myplan-plan-edit-dialog.component.html
@@ -52,4 +52,4 @@
   </div> -->
 </div>
 
-<button type="button" mat-dialog-close="cancel" class="abscancel"></button>
+<button type="button" mat-dialog-close="cancel" class="abscancel">{{"close"|translate}}</button>
