--- a/src/app/parts/myplan-spot-edit-dialog/myplan-spot-edit-dialog.component.html
+++ b/src/app/parts/myplan-spot-edit-dialog/myplan-spot-edit-dialog.component.html
@@ -61,4 +61,4 @@
     </div>
   </div>
 </div>
-<button type="button" mat-dialog-close="cancel" class="abscancel"></button>
+<button type="button" mat-dialog-close="cancel" class="abscancel">{{"close"|translate}}</button>
