--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,8 +29,10 @@
 .custom-snackbar {
   margin: auto !important;
   position: absolute;
-  top: 10px;
+  top: 0;
+  bottom: 0;
   width: 91% !important;
+  height: 50px;
   right: 0;
   left: 0;
   //background-color: #4A4A4A;
