--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -543,7 +543,7 @@
   }
 
   .myplan-box {
-    margin: 14px auto 0;
+    margin: 14px auto;
     display: flex;
     align-items: center;
     position: relative;
