--- a/src/app/parts/map-dialog/map-dialog.component.html
+++ b/src/app/parts/map-dialog/map-dialog.component.html
@@ -4,7 +4,8 @@
   [isDetail]="data.isDetail"
   [planSpots]="data.planSpots"
   [startPlanSpot]="data.startPlanSpot"
-  [endPlanSpot]="data.endPlanSpot"></app-map-panel>
+  [endPlanSpot]="data.endPlanSpot"
+  [isCar]="data.isCar"></app-map-panel>
 </mat-dialog-content>
 
 <button
@@ -17,5 +18,5 @@
   <mat-icon>clear</mat-icon>
 </button>
 
-  
+
 
