REMOJU-488 プラン作成　滞在時間表示

--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -159,6 +159,8 @@
                         / {{ item.categoryText | langFilter: lang }}
                       </ng-container>
                     </span>
+                    <span class="sugtime">{{ "SuggestedTime" | translate }}
+                      {{ item.stayTime }}{{ "Minute" | translate }}</span>
                   </div>
                 </dt>
                 <dt cdkDragHandle>
