--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -106,7 +106,7 @@ $color-grn01: #81C5B4;
     opacity: 0;
   }
 
-  input[type="checkbox"]:checked + label::after {
+  input[type="checkbox"]:checked+label::after {
     transform: rotate(45deg);
     top: 0;
     opacity: 1;
@@ -115,14 +115,14 @@ $color-grn01: #81C5B4;
 
 @mixin copy-protect {
   pointer-events: none;
-  -webkit-touch-callout:none;
-  -webkit-user-select:none;
-  -moz-touch-callout:none;
-  -moz-user-select:none;
-  user-select:none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-touch-callout: none;
+  -moz-user-select: none;
+  user-select: none;
 }
 
-@mixin scCheckbox{
+@mixin scCheckbox {
   input[type="checkbox"] {
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -132,10 +132,10 @@ $color-grn01: #81C5B4;
     margin: 0;
     z-index: 10;
 
-    &:checked + label{
+    &:checked+label {
       background-color: #fff;
-      color:$color-gld04;
-      border:1px solid $color-gld04;
+      color: $color-gld04;
+      border: 1px solid $color-gld04;
     }
   }
 
@@ -150,21 +150,22 @@ $color-grn01: #81C5B4;
 }
 
 @mixin routeIcons {
-  dl.route{
+  dl.route {
     display: inline-flex;
     margin: 0;
-    dd{
+
+    dd {
       margin-inline-start: 6px;
       position: relative;
 
-      &:first-child{
-        &::after{
+      &:first-child {
+        &::after {
           content: unset;
         }
       }
 
-      &.walk{
-        &::before{
+      &.walk {
+        &::before {
           content: "";
           display: inline-block;
           width: 24px;
@@ -173,8 +174,8 @@ $color-grn01: #81C5B4;
         }
       }
 
-      &.bus{
-        &::before{
+      &.bus {
+        &::before {
           content: "";
           display: inline-block;
           width: 24px;
@@ -183,8 +184,8 @@ $color-grn01: #81C5B4;
         }
       }
 
-      &.rail{
-        &::before{
+      &.rail {
+        &::before {
           content: "";
           display: inline-block;
           width: 24px;
@@ -193,8 +194,8 @@ $color-grn01: #81C5B4;
         }
       }
 
-      &.JR{
-        &::before{
+      &.JR {
+        &::before {
           content: "";
           display: inline-block;
           width: 24px;
@@ -203,8 +204,8 @@ $color-grn01: #81C5B4;
         }
       }
 
-      &.bullettrain{
-        &::before{
+      &.bullettrain {
+        &::before {
           content: "";
           display: inline-block;
           width: 24px;
@@ -213,8 +214,8 @@ $color-grn01: #81C5B4;
         }
       }
 
-      &.plane{
-        &::before{
+      &.plane {
+        &::before {
           content: "";
           display: inline-block;
           width: 24px;
@@ -223,8 +224,8 @@ $color-grn01: #81C5B4;
         }
       }
 
-      &.ship{
-        &::before{
+      &.ship {
+        &::before {
           content: "";
           display: inline-block;
           width: 24px;
@@ -259,7 +260,8 @@ $color-grn01: #81C5B4;
     .mat-list-item {
       height: auto;
       font-size: 13px;
-      ::ng-deep.mat-list-item-content{
+
+      ::ng-deep.mat-list-item-content {
         padding: 0;
       }
 
@@ -302,7 +304,7 @@ $color-grn01: #81C5B4;
             border-right: $dl-border-right;
           }
 
-          > dd:last-of-type::before {
+          >dd:last-of-type::before {
             position: absolute;
             top: $dd-top;
             left: $dd-left;
@@ -330,7 +332,7 @@ $color-grn01: #81C5B4;
             border-right: $dl-border-right;
           }
 
-          > dd:last-of-type::before {
+          >dd:last-of-type::before {
             position: absolute;
             top: $dd-top;
             left: $dd-left;
@@ -358,7 +360,7 @@ $color-grn01: #81C5B4;
             border-right: $dl-border-right;
           }
 
-          > dd:last-of-type::before {
+          >dd:last-of-type::before {
             position: absolute;
             top: $dd-top;
             left: $dd-left;
@@ -386,7 +388,7 @@ $color-grn01: #81C5B4;
             border-right: $dl-border-right;
           }
 
-          > dd:last-of-type::before {
+          >dd:last-of-type::before {
             position: absolute;
             top: $dd-top;
             left: $dd-left;
@@ -414,7 +416,7 @@ $color-grn01: #81C5B4;
             border-right: $dl-border-right;
           }
 
-          > dd:last-of-type::before {
+          >dd:last-of-type::before {
             position: absolute;
             top: $dd-top;
             left: $dd-left;
@@ -442,7 +444,7 @@ $color-grn01: #81C5B4;
             border-right: $dl-border-right;
           }
 
-          > dd:last-of-type::before {
+          >dd:last-of-type::before {
             position: absolute;
             top: $dd-top;
             left: $dd-left;
@@ -470,7 +472,7 @@ $color-grn01: #81C5B4;
             border-right: $dl-border-right;
           }
 
-          > dd:last-of-type::before {
+          >dd:last-of-type::before {
             position: absolute;
             top: $dd-top;
             left: $dd-left;
@@ -487,7 +489,7 @@ $color-grn01: #81C5B4;
         margin-block-end: 0;
 
         dd {
-          &:first-child{
+          &:first-child {
             height: 56px;
             margin-inline-start: 0;
             background-color: #fff;
@@ -495,20 +497,25 @@ $color-grn01: #81C5B4;
             display: flex;
             align-items: center;
 
-            span.icon{
+            span.icon {
               flex-basis: 30%;
               display: flex;
               justify-content: center;
             }
 
-            span.line{
+            span.line {
               margin-left: 2em;
+              max-width:58vw;
+              white-space: nowrap;
+              overflow: hidden;
+              text-overflow: ellipsis;
             }
           }
 
-          &:last-child{
+          &:last-child {
             display: flex;
-            .times{
+
+            .times {
               line-height: 1.2;
               flex-basis: 28%;
               display: flex;
@@ -516,13 +523,19 @@ $color-grn01: #81C5B4;
               justify-content: center;
               align-items: center;
             }
-            .station{
-              display: flex;
-              align-items: center;
+
+            .station {
+              //display: flex;
+              //align-items: center;
               font-size: 16px;
+              margin-top: -3px;
               margin-left: 1em;
-              font-weight:bolder;
+              font-weight: bolder;
               color: #555;
+              white-space: nowrap;
+              overflow: hidden;
+              text-overflow: ellipsis;
+              max-width: 58vw;
             }
           }
 
@@ -536,10 +549,10 @@ $color-grn01: #81C5B4;
       }
 
       @media screen and (min-width: 429px) and (max-width: 1024px) {
-        dl{
-          dd{
-            &:last-child{
-              .times{
+        dl {
+          dd {
+            &:last-child {
+              .times {
                 flex-basis: 18%;
               }
             }
@@ -552,13 +565,13 @@ $color-grn01: #81C5B4;
 
 // マイプラン編集・プレビュー切り替え
 @mixin switchView {
-  .switchView{
-    $edit:"編集";
-    $preview:"プレビュー";
-    $edit_en:"Edit";
-    $preview_en:"Preview";
-    $height:32px;
-    $radius:16px;
+  .switchView {
+    $edit: "編集";
+    $preview: "プレビュー";
+    $edit_en: "Edit";
+    $preview_en: "Preview";
+    $height: 32px;
+    $radius: 16px;
 
     line-height: $height;
     letter-spacing: 0;
@@ -570,70 +583,74 @@ $color-grn01: #81C5B4;
     width: 130px;
     background: #fff;
 
-    &.en{
-      input[type="checkbox"]{
-        &:checked +label{
-          span::after{
+    &.en {
+      input[type="checkbox"] {
+        &:checked+label {
+          span::after {
             content: $preview_en;
           }
         }
-        &:checked ~#swImg{
-          &::before{
+
+        &:checked~#swImg {
+          &::before {
             content: $edit_en;
           }
         }
       }
 
-      label{
-        span::after{
+      label {
+        span::after {
           content: $edit_en;
         }
       }
 
-      #swImg{
-        &::before{
+      #swImg {
+        &::before {
           content: $preview_en;
         }
       }
     }
 
-    input[type="checkbox"]{
+    input[type="checkbox"] {
       display: none;
-      &:checked +label{
+
+      &:checked+label {
         border-color: $color-pnk02;
-        span::after{
-          content: $edit;//$preview;
+
+        span::after {
+          content: $edit; //$preview;
           padding: 0 65px 0 0;
           color: $color-pnk02;
         }
       }
 
-      &:checked ~#swImg{
+      &:checked~#swImg {
         transform: translateX(60px);
         background: $color-pnk02;
-        &::before{
-          content: $preview;//$edit;
+
+        &::before {
+          content: $preview; //$edit;
           color: #fff;
         }
       }
     }
 
-    label{
+    label {
       display: block;
       box-sizing: border-box;
       height: $height;
       border: 1px solid $color-pnk02;
       border-radius: $radius;
 
-      span::after{
-        content: $preview;//$edit;
+      span::after {
+        content: $preview; //$edit;
         padding: 0 0 0 67px;
         color: $color-pnk02;
       }
     }
 
-    #swImg{
-      position:absolute;
+    #swImg {
+      position: absolute;
       width: 70px;
       height: $height;
       background: $color-pnk02;
@@ -642,8 +659,8 @@ $color-grn01: #81C5B4;
       border-radius: $radius;
       transition: .2s;
 
-      &::before{
-        content: $edit;//$preview;
+      &::before {
+        content: $edit; //$preview;
         color: #fff;
       }
     }
@@ -657,11 +674,13 @@ $color-grn01: #81C5B4;
   line-height: $line-height;
   word-break: break-all;
   overflow: hidden;
+
   &::before,
   &::after {
     position: absolute;
     background: $bg;
   }
+
   &::before {
     content: '...more';
     top: $font-size * $line-height * ($line - 1) + px;
@@ -669,6 +688,7 @@ $color-grn01: #81C5B4;
     width: 3.3em;
     color: #757575;
   }
+
   &::after {
     content: '';
     width: 100%;
@@ -676,23 +696,23 @@ $color-grn01: #81C5B4;
   }
 }
 
-.mat-divider{
+.mat-divider {
   position: absolute;
-  left: 0!important;
-  width: calc(100% - 32px)!important;
-  right: 0!important;
-  margin: auto!important;
+  left: 0 !important;
+  width: calc(100% - 32px) !important;
+  right: 0 !important;
+  margin: auto !important;
 }
 
 // プロフィール編集・プレビュー切り替え
 @mixin switchViewProf {
-  .switchViewProf{
-    $edit:"編集する";
-    $preview:"プレビュー表示";
-    $edit_en:"Edit";
-    $preview_en:"Preview";
-    $height:23px;
-    $radius:12px;
+  .switchViewProf {
+    $edit: "編集する";
+    $preview: "プレビュー表示";
+    $edit_en: "Edit";
+    $preview_en: "Preview";
+    $height: 23px;
+    $radius: 12px;
 
     line-height: $height;
     letter-spacing: 0;
@@ -704,70 +724,74 @@ $color-grn01: #81C5B4;
     width: 180px;
     background: #fff;
 
-    &.en{
-      input[type="checkbox"]{
-        &:checked +label{
-          span::after{
+    &.en {
+      input[type="checkbox"] {
+        &:checked+label {
+          span::after {
             content: $edit_en;
           }
         }
-        &:checked ~#swImg{
-          &::before{
+
+        &:checked~#swImg {
+          &::before {
             content: $preview_en;
           }
         }
       }
 
-      label{
-        span::after{
+      label {
+        span::after {
           content: $preview_en;
         }
       }
 
-      #swImg{
-        &::before{
+      #swImg {
+        &::before {
           content: $edit_en;
         }
       }
     }
 
-    input[type="checkbox"]{
+    input[type="checkbox"] {
       display: none;
-      &:checked +label{
+
+      &:checked+label {
         border-color: $color-pnk02;
-        span::after{
+
+        span::after {
           content: $edit;
           padding: 0 86px 0 0;
           color: $color-pnk02;
         }
       }
 
-      &:checked ~#swImg{
+      &:checked~#swImg {
         transform: translateX(92px);
         background: $color-pnk02;
-        &::before{
+
+        &::before {
           content: $preview;
           color: #fff;
         }
       }
     }
 
-    label{
+    label {
       display: block;
       box-sizing: border-box;
       height: $height;
       border: 1px solid $color-pnk02;
       border-radius: $radius;
 
-      span::after{
+      span::after {
         content: $preview;
         padding: 0 0 0 86px;
         color: $color-pnk02;
       }
     }
 
-    #swImg{
-      position:absolute;
+    #swImg {
+      position: absolute;
       width: 88px;
       height: $height;
       background: $color-pnk02;
@@ -776,7 +800,7 @@ $color-grn01: #81C5B4;
       border-radius: $radius;
       transition: .2s;
 
-      &::before{
+      &::before {
         content: $edit;
         color: #fff;
       }
@@ -786,13 +810,13 @@ $color-grn01: #81C5B4;
 
 // メニュー言語切り替え
 @mixin switchViewLang {
-  .switchViewLang{
-    $edit:"English";
-    $preview:"日本語";
-    $edit_en:"English";
-    $preview_en:"Japanese";
-    $height:32px;
-    $radius:16px;
+  .switchViewLang {
+    $edit: "English";
+    $preview: "日本語";
+    $edit_en: "English";
+    $preview_en: "Japanese";
+    $height: 32px;
+    $radius: 16px;
 
     line-height: $height;
     letter-spacing: 0;
@@ -804,70 +828,74 @@ $color-grn01: #81C5B4;
     width: 130px;
     background: #fff;
 
-    &.en{
-      input[type="checkbox"]{
-        &:checked +label{
-          span::after{
+    &.en {
+      input[type="checkbox"] {
+        &:checked+label {
+          span::after {
             content: $preview_en;
           }
         }
-        &:checked ~#swImg{
-          &::before{
+
+        &:checked~#swImg {
+          &::before {
             content: $edit_en;
           }
         }
       }
 
-      label{
-        span::after{
+      label {
+        span::after {
           content: $edit_en;
         }
       }
 
-      #swImg{
-        &::before{
+      #swImg {
+        &::before {
           content: $preview_en;
         }
       }
     }
 
-    input[type="checkbox"]{
+    input[type="checkbox"] {
       display: none;
-      &:checked +label{
+
+      &:checked+label {
         border-color: $color-pnk02;
-        span::after{
+
+        span::after {
           content: $preview;
           padding: 0 65px 0 0;
           color: $color-pnk02;
         }
       }
 
-      &:checked ~#swImg{
+      &:checked~#swImg {
         transform: translateX(60px);
         background: $color-pnk02;
-        &::before{
+
+        &::before {
           content: $edit;
           color: #fff;
         }
       }
     }
 
-    label{
+    label {
       display: block;
       box-sizing: border-box;
       height: $height;
       border: 1px solid $color-pnk02;
       border-radius: $radius;
 
-      span::after{
+      span::after {
         content: $edit;
         padding: 0 0 0 67px;
         color: $color-pnk02;
       }
     }
 
-    #swImg{
-      position:absolute;
+    #swImg {
+      position: absolute;
       width: 70px;
       height: $height;
       background: $color-pnk02;
@@ -876,12 +904,10 @@ $color-grn01: #81C5B4;
       border-radius: $radius;
       transition: .2s;
 
-      &::before{
+      &::before {
         content: $preview;
         color: #fff;
       }
     }
   }
 }
-
-
